Prepare for Render deployment: Add gunicorn, update port handling

--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,21 @@ Create a `.env` file in the root directory with the following variables:
 ```
 GOOGLE_API_KEY=your_google_generative_ai_api_key_here
 LLM_TIMEOUT_SECONDS=150
+PORT=8000
 ```
 
-Replace `your_google_generative_ai_api_key_here` with your actual Google Generative AI API key.
+Replace `your_google_generative_ai_key_here` with your actual Google Generative AI API key.
+
+## For Render Deployment
+
+Set these as environment variables in your Render dashboard:
+- `GOOGLE_API_KEY`: Your Google Generative AI API key
+- `LLM_TIMEOUT_SECONDS`: 150 (or adjust as needed)
+- `PORT`: Will be automatically set by Render
 
 ## Getting a Google Generative AI API Key
 
 1. Go to [Google AI Studio](https://makersuite.google.com/app/apikey)
 2. Sign in with your Google account
 3. Create a new API key
-4. Copy the key and paste it in your `.env` file
+4. Copy the key and use it in your environment variables
